# score-backend

./: pyproject.toml  pytest.ipynb  pytest.py  topics_database.json
app/: config.py  crud.py  main.py  models.py  schemas.py
app/models/: model.py
app/processors/: classifier.py  keywords.py  pdf_processor.py
app/routes/: comments.py  notes.py  users.py
app/storage/: supabase_storage.py
app/utils/: ai_utils.py  storage.py
