[project]
name = "score"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bertopic>=0.16.4",
    "docx>=0.2.4",
    "fastapi[standard]>=0.115.11",
    "fitz>=0.0.1.dev2",
    "fuzzywuzzy>=0.18.0",
    "ipykernel>=6.29.5",
    "nltk>=3.9.1",
    "pydantic-settings>=2.8.1",
    "pymupdf>=1.25.5",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-levenshtein>=0.27.1",
    "python-multipart>=0.0.20",
    "spacy>=3.8.4",
    "supabase>=2.13.0",
]
